--- a/Semana-03/style.css
+++ b/Semana-03/style.css
@@ -19,10 +19,12 @@
         text-align: justify;
         margin: 3% 0;
     }
-    #body{
-        padding-left:22%;
-        margin-left:3%;
-        margin-right:3%;
+    #main{
+        top:0;
+        right:0;
+        padding-left:3%;
+        padding-right:3%;
+        margin-left:22%;
         width:78%;
         height:76%;
     }
@@ -59,9 +61,9 @@
         text-decoration-color:#ED2626;
     }
     #logo{
-        margin-left:10%;
-        margin-top:2%;
-        margin-bottom:2%;
+        padding-left:10%;
+        padding-top:2%;
+        padding-bottom:2%;
         display: block;
         text-align: justify;
     }
@@ -83,8 +85,8 @@
     }
     #landing-spotlight{
         text-align: center;
-        margin-left:10%;
-        margin-right:10%;
+        margin-left:13%;
+        margin-right:13%;
     }
     #landing-know-more{
         text-align: center;
