--- a/Semana-04/style.css
+++ b/Semana-04/style.css
@@ -12,7 +12,7 @@ h2{
 h3{
     font: 200%/2 Helvetica, sans-serif, bolder
 }
-h3{
+h4{
     font: 150%/2 Helvetica, sans-serif, bold
 }
 a{
@@ -61,7 +61,7 @@ footer{
     display:flex;
     flex-direction:row;
     justify-content:space-around;
-    align-items:center;
+    align-self:center;
 }
 .search-bar{
     display: flex;
@@ -104,7 +104,7 @@ footer{
     display:flex;
     flex-direction:row;
     justify-content:space-between;
-    align-items:center;
+    align-self:center;
 }
 .about-us{
     display:flex;
@@ -127,15 +127,17 @@ footer{
     flex-direction:column;
     justify-content:space-between;
 }
-.system-information form{
+.system-information form div{
     display:flex;
-    flex-direction:column;
+    flex-direction:row;
+    justify-content: space-around;
+    align-self:center;
 }
 .extras{
     display:flex;
     flex-direction:row;
     justify-content:space-around;
-    align-items:center;
+    align-self:center;
     background-color: #50A780;
 }
 .social-media img{
@@ -146,6 +148,6 @@ footer{
     display:flex;
     flex-direction:column;
     justify-content:center;
-    align-items: center;
+    align-self: center;
     text-align: center;
 }
