--- a/Semana-04/CSS/style.css
+++ b/Semana-04/CSS/style.css
@@ -7,13 +7,13 @@ h1{
     font: 300%/2 Helvetica, sans-serif, bolder
 }
 h2{
-    font: 250%/2 Helvetica, sans-serif, bolder
+    font: 250%/1.75 Helvetica, sans-serif, bolder
 }
 h3{
-    font: 200%/2 Helvetica, sans-serif, bolder
+    font: 200%/1.5 Helvetica, sans-serif, bolder
 }
 h4{
-    font: 150%/2 Helvetica, sans-serif, bold
+    font: 150%/1.25 Helvetica, sans-serif, bold
 }
 a{
     color:#000;
@@ -29,22 +29,47 @@ header{
     justify-content: space-around;
     align-items:center;
     width:100%;
-    height:auto;
+    height:7%;
 }
 header div input[type='image']{
     height:10%;
     width:10%;
 }
+header div button{
+    border-radius:200px;
+    background-color:#fff;
+    border-style:none;
+}
 aside{
     display:flex;
     flex-direction:column;
     justify-content:space-around;
-    align-items:center;
+    align-items:flex-start;
     float:left;
     background:linear-gradient(#50A780,#fff 80%);
     width:22%;
     height:100%;
     text-align: justify;
+}
+aside div{
+    padding:10%;
+}
+aside div button{
+    border-radius:5px;
+    background-color:#49A37B;
+    border-color:#000;
+    border-style:solid;
+    border-width:1px;
+}
+aside hr{
+    background-color: #ED2626;
+    border:none;
+    height:2px;
+}
+aside nav hr{
+    background-color: #CECACA;
+    border:none;
+    height:1px;
 }
 main{
     display:flex;
@@ -63,6 +88,10 @@ footer{
     width:80%;
     margin:auto;
     padding:auto;
+    overflow:hidden;
+}
+.burguer-btn{
+    filter: invert(100%);
 }
 .search-bar{
     display: flex;
@@ -70,20 +99,25 @@ footer{
 }
 .search-field{
     background:#fff;
+    border-style:none;
+    border-radius:200px 0 0 200px;
 }
 .search-submit{
-    object-fit: cover;
+    background:#fff;
+    border-style:none;
+    border-radius:0 200px 200px 0;
 }
 .logo{
     display:flex;
     justify-content:flex-start;
     align-self:flex-start;
+    padding:1%;
 }
 .logo img{
     display:flex;
     align-self:center;    
-    height:5%;
-    width:5%;
+    height:8%;
+    width:8%;
 }
 .general{
     display:flex;
@@ -139,13 +173,19 @@ footer{
     padding: 10%;
     padding-top: 5%;
     margin: 0% 13%;
-
+    color:#373867;
 }
-.system-information form{
+.system-information form div{
     display:flex;
     flex-direction:column;
     justify-content: space-around;
     align-self:center;
+    flex-wrap:wrap;
+}
+.system-information input[type=submit]{
+    background-color:#AACE9B;
+    border-style:none;
+    border-radius:5px;
 }
 .extras{
     display:flex;
@@ -154,6 +194,12 @@ footer{
     align-self:center;
     background-color: #50A780;
     width:100%;
+    margin:auto;
+    padding:3% 0%;
+}
+.extras hr{
+    margin: 0 -40%;
+    border: 1px solid #000;
 }
 .social-media img{
     height:50px;
