--- a/Semana-04/CSS/style.css
+++ b/Semana-04/CSS/style.css
@@ -1,25 +1,28 @@
 body{
-    font: 100%/1.5 Helvetica, sans-serif; 
+    font: 100%/1.5 Helvetica, sans-serif;
     padding:0;
     margin:0;
 }
 h1{
-    font: 300%/2 Helvetica, sans-serif, bolder
+    font: 300%/1.5 Helvetica, sans-serif, bolder
 }
 h2{
-    font: 250%/1.75 Helvetica, sans-serif, bolder
+    font: 250%/1.25 Helvetica, sans-serif, bolder
 }
 h3{
-    font: 200%/1.5 Helvetica, sans-serif, bolder
+    font: 200%/1 Helvetica, sans-serif, bolder
 }
 h4{
-    font: 150%/1.25 Helvetica, sans-serif, bold
+    font: 150%/1 Helvetica, sans-serif, bold
 }
 a{
     color:#000;
     text-decoration: none;
 }
 a:hover{
+    background-color:#808080;
+}
+button:hover{
     background-color:#808080;
 }
 header{
@@ -47,7 +50,7 @@ aside{
     align-items:flex-start;
     float:left;
     background:linear-gradient(#50A780,#fff 80%);
-    width:22%;
+    width:400px;
     height:100%;
     text-align: justify;
 }
@@ -66,7 +69,19 @@ aside hr{
     border:none;
     height:2px;
 }
+aside nav{
+    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
 aside nav hr{
+    background-color: #CECACA;
+    border:none;
+    height:1px;
+}
+aside address{
+    margin-top: 20%;
+    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+aside address hr{
     background-color: #CECACA;
     border:none;
     height:1px;
@@ -95,7 +110,7 @@ footer{
 }
 .search-bar{
     display: flex;
-    flex-direction: row;
+    justify-content: center;
 }
 .search-field{
     background:#fff;
@@ -107,27 +122,43 @@ footer{
     border-style:none;
     border-radius:0 200px 200px 0;
 }
+.access{
+    display: flex;
+    justify-content: center;
+}
+.access button{
+    width: 200px;
+    height: 50px;
+    margin: 0% 3%;
+}
 .logo{
     display:flex;
     justify-content:flex-start;
-    align-self:flex-start;
-    padding:1%;
+    align-self:center;
+    margin:1% 0% 0% 8%;
 }
 .logo img{
     display:flex;
-    align-self:center;    
+    align-self:center;
     height:8%;
     width:8%;
+    margin-right:3%;
 }
 .general{
     display:flex;
     flex-direction:row;
     justify-content:space-around;
+    padding: 5%;
 }
 .general img{
     float:left;
     height:100%;
     width:100%;
+    margin-right:3%;
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+}
+.general p{
+    width: fit-content;
 }
 .spotlight{
     display:flex;
@@ -135,16 +166,24 @@ footer{
     justify-content:space-between;
     align-self: center;
     text-align: center;
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+}
+.spotlight figure{
+    background-color: #EFE7E7;
+    width:109px;
+    height:107px;
 }
 .spotlight img{
-    height:80%;
-    width:100%;
+    width:107px;
+    height:83px;
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
 }
 .know-more{
     display:flex;
     flex-direction:row;
     justify-content:space-between;
     align-self:center;
+    padding: 5%;
 }
 .about-us{
     display:flex;
@@ -153,14 +192,18 @@ footer{
     border-radius: 20px;
     text-align: justify;
     overflow: hidden;
+    padding:3%;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 .about-us-img1{
     float:left;
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
 }
 .about-us-img2{
     float:right;
     height:50%;
-    width:50%;    
+    width:50%;
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
 }
 .list{
     display:flex;
@@ -168,24 +211,54 @@ footer{
     justify-content:space-between;
 }
 .system-information{
-    width: 78%;
-    height: 10%;
-    padding: 10%;
-    padding-top: 5%;
+    padding: 5%;
     margin: 0% 13%;
     color:#373867;
 }
-.system-information form div{
+.system-information form{
+    display:flex;
+    flex-direction:row;
+    justify-content: center;
+    align-items: center;
+}
+.system-information hr{
+    margin: 1% 0%;
+}
+.form-left{
     display:flex;
     flex-direction:column;
-    justify-content: space-around;
-    align-self:center;
-    flex-wrap:wrap;
+    margin-right: 3%;
+}
+.form-right{
+    display:flex;
+    flex-direction:column;
+}
+.system-information input{
+    border-color: #7B61FF;
+    border-radius:4px;
+    font: 100%/1.5 Helvetica, sans-serif;
+}
+.system-information select{
+    border-color: #7B61FF;
+    border-radius:4px;
+    background-color: #fff;
+    font: 100%/1.5 Helvetica, sans-serif;
+    width: 330px;
+    height: 70px;    
+}
+.system-information textarea{
+    border-color: #7B61FF;
+    border-radius:4px;
+    font: 100%/1.5 Helvetica, sans-serif;
+    width: 430px;
+    height: 240px;
 }
 .system-information input[type=submit]{
     background-color:#AACE9B;
     border-style:none;
     border-radius:5px;
+    font: 100%/1.5 Helvetica, sans-serif;
+    margin-top: 3%;
 }
 .extras{
     display:flex;
@@ -197,9 +270,15 @@ footer{
     margin:auto;
     padding:3% 0%;
 }
+.extras a{
+    color: #DBDBDB;
+}
 .extras hr{
     margin: 0 -40%;
     border: 1px solid #000;
+}
+.social-media{
+    padding: 1%;
 }
 .social-media img{
     height:50px;
