--- a/Semana-04/CSS/style.css
+++ b/Semana-04/CSS/style.css
@@ -1,292 +1,405 @@
 body{
     font: 100%/1.5 Helvetica, sans-serif;
-    padding:0;
-    margin:0;
+    padding: 0;
+    margin: 0;
+    overflow-x:hidden;
 }
+
 h1{
-    font: 300%/1.5 Helvetica, sans-serif, bolder
+    font: 300%/1.5 Helvetica, sans-serif, bolder;
 }
+
 h2{
-    font: 250%/1.25 Helvetica, sans-serif, bolder
+    font: 250%/1.25 Helvetica, sans-serif, bolder;
 }
+
 h3{
-    font: 200%/1 Helvetica, sans-serif, bolder
+    font: 200%/1 Helvetica, sans-serif, bold;
 }
+
 h4{
-    font: 150%/1 Helvetica, sans-serif, bold
+    font: 150%/1 Helvetica, sans-serif, bold;
 }
+
 a{
-    color:#000;
+    color: #000;
     text-decoration: none;
 }
+
 a:hover{
-    background-color:#808080;
+    background-color: #808080;
 }
+
 button:hover{
-    background-color:#808080;
+    background-color: #808080;
 }
+
 header{
     background-color: #50A780;
-    display:flex;
-    flex-direction:row;
+    display: flex;
+    flex-direction: row;
     justify-content: space-around;
-    align-items:center;
-    width:100%;
-    height:80px;
+    align-items: center;
+    height: 80px;
 }
+
 header div input[type='image']{
-    height:50px;
-    width:50px;
+    height: 50px;
+    width: 50px;
 }
+
 header div button{
-    border-radius:200px;
-    background-color:#fff;
-    border-style:none;
+    border-radius: 200px;
+    background-color: #fff;
+    border-style: none;
 }
+
 aside{
-    display:flex;
-    flex-direction:column;
-    justify-content:space-around;
-    align-items:flex-start;
-    float:left;
-    background:linear-gradient(#50A780,#fff 80%);
-    width:400px;
-    height:100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    float: left;
+    background: linear-gradient(#50A780,#fff 80%);
+    width: 400px;
+    height: auto;
     text-align: justify;
 }
+
 aside div{
-    padding:10%;
+    padding: 10%;
 }
+
 aside div button{
-    border-radius:5px;
-    background-color:#49A37B;
-    border-color:#000;
-    border-style:solid;
-    border-width:1px;
+    border-radius: 5px;
+    background-color: #49A37B;
+    border-color: #000;
+    border-style: solid;
+    border-width: 1px;
+    width: 330px;
+    height: 50px;
 }
+
 aside hr{
     background-color: #ED2626;
-    border:none;
-    height:2px;
+    border: none;
+    height: 2px;
 }
+
 aside nav{
     text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
+
 aside nav hr{
     background-color: #CECACA;
-    border:none;
-    height:1px;
+    border: none;
+    height: 1px;
 }
+
 aside address{
     margin-top: 20%;
     text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
+
 aside address hr{
     background-color: #CECACA;
-    border:none;
-    height:1px;
+    border: none;
+    height: 1px;
 }
+
 main{
-    display:flex;
-    flex-direction:column;
-    justify-content:space-between;
-    align-items:center;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
 }
+
 footer{
     text-align: center;
 }
+
 .container{
-    width:80%;
-    margin:auto;
-    padding:auto;
-    overflow:hidden;
+    width: 80%;
+    margin: auto;
+    padding: auto;
+    overflow: hidden;
 }
-.burguer-btn{
+
+.burguer-btn input{
     filter: invert(100%);
 }
+
 .search-bar{
     display: flex;
     justify-content: center;
 }
+
 .search-field{
-    background:#fff;
-    border-style:none;
-    border-radius:200px 0 0 200px;
+    background: #fff;
+    border-style: none;
+    border-radius: 200px 0 0 200px;
 }
+
 .search-submit{
-    background:#fff;
-    border-style:none;
-    border-radius:0 200px 200px 0;
+    background: #fff;
+    border-style: none;
+    border-radius: 0 200px 200px 0;
 }
+
 .access{
     display: flex;
     justify-content: center;
 }
+
 .access button{
     width: 200px;
     height: 50px;
     margin: 0% 3%;
 }
+
+/*to be fixed*/
 .logo{
-    display:flex;
-    justify-content:flex-start;
-    align-self:center;
-    margin:1% 0% 0% 8%;
+    display: flex;
+    justify-content: row;
+    align-items: flex-start;
+    padding: 25px;
+    width: 340px;
+    height: 70px;
 }
+
 .logo img{
-    display:flex;
-    align-self:center;
-    height:8%;
-    width:8%;
-    margin-right:3%;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-self: center;
+    height: 70px;
+    width: 70px;
+    margin-right: 3%;
 }
+
+.logo div{
+    display: flex;
+    flex-direction: column;
+    align-self: flex-start;
+    height: 70px;
+}
+/*end*/
+
 .general{
-    display:flex;
-    flex-direction:row;
-    justify-content:space-around;
-    padding: 5%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    padding: 25px;
 }
+
 .general img{
-    float:left;
-    height:100%;
-    width:100%;
-    margin-right:3%;
+    display: flex;
+    justify-content: flex-start;
+    width: 80%;
+    height: 80%;
+    margin-right: 3%;
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
 }
+
 .general p{
+    display: flex;
+    justify-content: flex-end;
     width: fit-content;
 }
+
 .spotlight{
-    display:flex;
-    flex-direction:row;
-    justify-content:space-between;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
     align-self: center;
+    flex-wrap: wrap-reverse;
     text-align: center;
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
 }
+
 .spotlight figure{
     background-color: #EFE7E7;
-    width:109px;
-    height:107px;
+    width: 109px;
+    height: 107px;
 }
+
 .spotlight img{
-    width:107px;
-    height:83px;
+    width: 107px;
+    height: 83px;
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
 }
+
 .know-more{
-    display:flex;
-    flex-direction:row;
-    justify-content:space-between;
-    align-self:center;
-    padding: 5%;
+    display: flex;
+    justify-content: center;
+    align-self: center;
+    flex-wrap: wrap;
+    padding: 25px;
 }
+
 .know-more h4{
-    margin-bottom:15px;
+    margin-bottom: 15px;
 }
+
 .about-us{
-    display:flex;
-    flex-direction:column;
-    background-color:#E9E9E9;
+    background-color: #E9E9E9;
     border-radius: 20px;
     text-align: justify;
     overflow: hidden;
-    padding:3%;
+    padding: 25px;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
+
 .about-us h4{
     margin-bottom: 15px;
 }
+
 .about-us-img1{
-    float:left;
+    float: left;
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
-    margin:0% 2% 2% 0%;
+    margin: 0% 2% 2% 0%;
 }
+
 .about-us-img2{
-    float:right;
-    height:50%;
-    width:50%;
+    float: right;
+    height: 50%;
+    width: 50%;
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
-    margin:0% 0% 0% 2%;
+    margin: 0% 0% 0% 2%;
 }
+
 .list{
-    display:flex;
-    flex-direction:column;
-    justify-content:space-between;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
+
 .system-information{
-    padding: 5%;
+    padding: 25px;
     margin: 0% 13%;
-    color:#373867;
+    color: #373867;
 }
+
 .system-information form{
-    display:flex;
-    flex-direction:row;
+    display: flex;
+    flex-direction: row;
     justify-content: center;
     align-items: center;
 }
+
 .form-left{
-    display:flex;
-    flex-direction:column;
+    display: flex;
+    flex-direction: column;
     margin-right: 3%;
 }
+
 .form-right{
-    display:flex;
-    flex-direction:column;
+    display: flex;
+    flex-direction: column;
 }
+
 .system-information input{
     border-color: #7B61FF;
-    border-style:solid;
-    border-radius:4px;
+    border-style: solid;
+    border-radius: 4px;
     font: 100%/1.5 Helvetica, sans-serif;
 }
+
 .system-information select{
     border-color: #7B61FF;
-    border-radius:4px;
+    border-radius: 4px;
     background-color: #fff;
-    border-style:solid;
+    border-style: solid;
     font: 100%/1.5 Helvetica, sans-serif;
     width: 330px;
     height: 50px;
 }
+
 .system-information textarea{
     border-color: #7B61FF;
-    border-style:solid;
-    border-radius:4px;
+    border-style: solid;
+    border-radius: 4px;
     font: 100%/1.5 Helvetica, sans-serif;
     width: 430px;
     height: 240px;
     margin-top: 75px;
 }
+
 .system-information input[type=submit]{
-    background-color:#AACE9B;
-    border-style:none;
-    border-radius:5px;
+    background-color: #AACE9B;
+    border-style: none;
+    border-radius: 5px;
     font: 100%/1.5 Helvetica, sans-serif;
     margin-top: 3%;
 }
+
 .extras{
-    display:flex;
-    flex-direction:row;
-    justify-content:space-around;
-    align-self:center;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-self: center;
     background-color: #50A780;
-    width:100%;
-    margin:auto;
-    padding:3% 0%;
+    width: 100%;
+    padding: 25px 0%;
 }
+
 .extras a{
     color: #DBDBDB;
 }
+
 .extras hr{
-    margin: 0 -40%;
     border: 1px solid #000;
+    background-color: #000;
 }
+
 .social-media{
     padding: 1%;
 }
+
 .social-media img{
-    height:50px;
-    width:50px;
+    height: 50px;
+    width: 50px;
     filter: grayscale(200%);
+}
+
+@media(max-width:768px){
+    aside , .system-information{
+        display: none;
+    }
+}
+
+@media(max-width:480px){
+    header aside, .system-information, header nav, .search-field{
+        display: none;
+    }
+
+    .search-submit{
+        display: flex;
+        order: 3;
+        background-color: transparent;
+        filter: invert(100%);
+    }
+
+    .burguer-btn{
+        display: flex;
+        order: 1;
+    }
+    .access{
+        display: flex;
+        order: 2;
+    }
+
+    .general{
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+    }
+
+    .spotlight{
+        display: flex;
+        flex-wrap: wrap;
+    }
+
+    .know-more{
+        text-align: center;
+    }
 }
