--- a/Semana-04/CSS/style.css
+++ b/Semana-04/CSS/style.css
@@ -151,8 +151,7 @@ footer{
 }
 
 .access button{
-    width: 200px;
-    height: 50px;
+    width: 100%;
     margin: 0% 3%;
 }
 
@@ -161,9 +160,6 @@ footer{
     display: flex;
     justify-content: row;
     align-items: flex-start;
-    padding: 25px;
-    width: 340px;
-    height: 70px;
 }
 
 .logo img{
@@ -171,16 +167,18 @@ footer{
     flex-direction: row;
     justify-content: flex-start;
     align-self: center;
-    height: 70px;
-    width: 70px;
-    margin-right: 3%;
+    width:100%;
 }
 
 .logo div{
     display: flex;
     flex-direction: column;
-    align-self: flex-start;
-    height: 70px;
+    width: 100%;
+}
+
+.logo div h1, .logo div h2{
+    display: flex;
+    align-items: center;
 }
 /*end*/
 
@@ -188,7 +186,7 @@ footer{
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    padding: 25px;
+    margin: 3%;
 }
 
 .general img{
@@ -198,6 +196,7 @@ footer{
     height: 80%;
     margin-right: 3%;
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+    margin: 2%;
 }
 
 .general p{
@@ -214,12 +213,14 @@ footer{
     flex-wrap: wrap-reverse;
     text-align: center;
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+    margin: 3%;
 }
 
 .spotlight figure{
     background-color: #EFE7E7;
     width: 109px;
     height: 107px;
+    margin: 2%;
 }
 
 .spotlight img{
@@ -233,7 +234,12 @@ footer{
     justify-content: center;
     align-self: center;
     flex-wrap: wrap;
-    padding: 25px;
+    padding: 2%;
+    margin: 3%;
+}
+
+.know-more div{
+    margin: 2%;
 }
 
 .know-more h4{
@@ -245,7 +251,8 @@ footer{
     border-radius: 20px;
     text-align: justify;
     overflow: hidden;
-    padding: 25px;
+    padding: 2%;
+    margin: 3%;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
@@ -340,6 +347,7 @@ footer{
     background-color: #50A780;
     width: 100%;
     padding: 25px 0%;
+    margin: 3% 0%;
 }
 
 .extras a{
@@ -352,7 +360,11 @@ footer{
 }
 
 .social-media{
-    padding: 1%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    margin: 3%;
 }
 
 .social-media img{
@@ -368,24 +380,27 @@ footer{
 }
 
 @media(max-width:480px){
-    header aside, .system-information, header nav, .search-field{
+    aside, .system-information, header nav, .search-field{
         display: none;
-    }
-
-    .search-submit{
-        display: flex;
-        order: 3;
-        background-color: transparent;
-        filter: invert(100%);
     }
 
     .burguer-btn{
         display: flex;
-        order: 1;
+        order: 1;        
     }
+    .search-bar{
+        display: flex;
+        order: 3;
+    }
+    .search-submit{
+        background-color: transparent;
+        filter: invert(100%);
+    }
+
     .access{
         display: flex;
         order: 2;
+        display: flex;
     }
 
     .general{
@@ -396,7 +411,33 @@ footer{
 
     .spotlight{
         display: flex;
+        justify-content: space-around;
         flex-wrap: wrap;
+    }
+
+    .spotlight figure:nth-child(1){
+        display: flex;
+        order: 5;
+    }
+
+    .spotlight figure:nth-child(2){
+        display: flex;
+        order: 1;
+    }
+
+    .spotlight figure:nth-child(3){
+        display: flex;
+        order: 4;
+    }
+
+    .spotlight figure:nth-child(4){
+        display: flex;
+        order: 2;
+    }
+
+    .spotlight figure:nth-child(5){
+        display: flex;
+        order: 3;
     }
 
     .know-more{
