--- a/Semana-04/CSS/style.css
+++ b/Semana-04/CSS/style.css
@@ -41,7 +41,7 @@ header{
     justify-content: space-around;
     align-items: center;
     width: 100%;
-    height: 5%;
+    height: 7%;
 }
 
 header div input[type='image'], header form input[type='image']{
@@ -132,18 +132,23 @@ footer{
 .search-bar{
     display: flex;
     justify-content: center;
+    align-items: center;
 }
 
 .search-field{
     background: #fff;
-    border-style: none;
+    border-style: solid;
+    border-color: #fff;
     border-radius: 200px 0 0 200px;
+    height: 50px;
 }
 
 .search-submit{
     background: #fff;
-    border-style: none;
+    border-style: solid;
+    border-color: #fff;
     border-radius: 0 200px 200px 0;
+    height: 50px;
 }
 
 .access{
@@ -152,7 +157,8 @@ footer{
 }
 
 .access button{
-    width: 100%;
+    width: 90px;
+    height: 25px;
     margin: 0% 3%;
 }
 
@@ -378,6 +384,78 @@ footer{
     aside , .system-information{
         display: none;
     }
+
+    .search-field{
+        width: 250px;
+        height: 50px;
+    }
+    
+    .search-submit{
+        width: 50px;
+        height: 50px;
+    }
+
+    .logo{
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .general img{
+        width: 330px;
+        height: 240px;
+    }
+
+    .tablet-content{
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+    }
+
+    .spotlight{
+        order:2;
+        flex-wrap: wrap;
+    }
+
+    .spotlight figure:nth-child(1){
+        display: flex;
+        order: 3;
+    }
+
+    .spotlight figure:nth-child(2){
+        display: flex;
+        order: 5;
+    }
+
+    .spotlight figure:nth-child(3){
+        display: flex;
+        order: 1;
+    }
+
+    .spotlight figure:nth-child(4){
+        display: flex;
+        order: 4;
+    }
+
+    .spotlight figure:nth-child(5){
+        display: flex;
+        order: 2;
+    }
+
+    .know-more{
+        order:1;
+    }
+    .about-us-img1{
+        width: 130px;
+        height: 100px;
+    }
+
+    .about-us-img2{
+        width: 250px;
+        height: 100px;
+    }
 }
 
 @media(max-width:480px){
@@ -401,10 +479,6 @@ footer{
     .access{
         order:2;
     }
-    .access button{
-        width: 90px;
-        height: 25px;
-    }
 
     .logo{
         display: flex;
@@ -412,6 +486,7 @@ footer{
         justify-content: center;
         align-items: center;
     }
+
     .general{
         display: flex;
         flex-direction: column;
@@ -419,10 +494,15 @@ footer{
         align-items: center;
         text-align: center;
     }
+
     .general img{
         width: 330px;
         height: 240px;
     }
+    .general p{
+        padding:4%;
+    }
+
     .spotlight{
         display: flex;
         justify-content: space-around;
